Update Kieren's bio.

--- a/public/staff/index.html
+++ b/public/staff/index.html
@@ -89,9 +89,8 @@ Trust Sanger Institute as a Senior Bioinformatician working on the <a href="http
 
 <p>Kieren Pitts began developing Web sites in 1995 and is an experienced developer, having worked in the education, charity and commercial sectors and also as a 
 freelancer. Kieren is currently employed as a Senior Technical Researcher by <a href="http://www.bristol.ac.uk/it-services/research">Research IT</a>, the research 
-and development division of the University of Bristol's IT Services. Kieren's primary role is lead developer on <a href="http://www.onlinesurveys.ac.uk/">Bristol 
-Online Surveys (BOS)</a> - an online survey tool used by approximately 300 institutions and with more than 36,000 registered users. His main interests are in Web 
-standards, accessibility, programming (Python, Perl and PHP), application security and games development.</p>
+and development division of the University of Bristol's IT Services. His main interests are in Web standards, accessibility, programming (Python, Perl and PHP), 
+application security and games development.</p>
 
 <h2>Peter Otto, Lecturer</h2>
 
