--- a/public/reading-list/index.html
+++ b/public/reading-list/index.html
@@ -70,6 +70,39 @@ Reading List | Web Development and User Experience - Birkbeck, University of Lon
 Reading List
 </h1>
                 
+<h2>Core Reading List</h2>
+
+<ul>
+    <li>Jeffrey Zeldman, Ethan Marcotte - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321616952/iansealycom">Designing with Web Standards</a></li>
+    <li>Elizabeth Castro, Bruce Hyslop - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321928830/iansealycom">HTML and CSS: Visual QuickStart Guide</a></li>
+    <li>Eric Meyer - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/073571245X/iansealycom">Eric Meyer on CSS</a></li>
+    <li>Russ Unger, Carolyn Chandler - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321815386/iansealycom">A Project Guide to UX Design</a></li>
+    <li>Don Norman - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0465050654/iansealycom">The Design of Everyday Things</a></li>
+    <li>William Lidwell, Kritina Holden, Jill Butler - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/1592530079/iansealycom">Universal Principles of Design</a></li>
+</ul>
+
+<h2>Further Reading List</h2>
+
+<ul>
+    <li>Steve Krug - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321965515/iansealycom">Don't Make Me Think, Revisited</a></li>
+    <li>Alan Cooper, Robert Reimann, David Cronin, Christopher Noessel - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/1118766571/iansealycom">About Face: The Essentials of Interaction Design</a></li>
+    <li>Scott McCloud - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/006097625X/iansealycom">Understanding Comics: The Invisible Art</a></li>
+    <li>Jeffrey Veen - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0789723700/iansealycom">The Art and Science of Web Design</a></li>
+    <li>Jakob Nielsen - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/156205810X/iansealycom">Designing Web Usability: The Practice of Simplicity</a></li>
+    <li>Jesse James Garrett - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321683684/iansealycom">The Elements of User Experience</a></li>
+    <li>Louis Rosenfeld, Peter Morville, Jorge Arango - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/1491911689/iansealycom">Information Architecture: For the Web and Beyond</a></li>
+    <li>Christina Wodtke, Austin Govella - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321600800/iansealycom">Information Architecture: Blueprints for the Web</a></li>
+    <li>Luke Wroblewski - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0764536745/iansealycom">Site-Seeing: A Visual Approach to Web Usability</a></li>
+    <li>Jim Thatcher - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/1590591488/iansealycom">Constructing Accessible Web Sites</a></li>
+    <li>Mike Kuniavsky, Elizabeth Goodman, Andrea Moed - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0123848695/iansealycom">Observing the User Experience</a></li>
+    <li>Karen Donoghue - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0071383042/iansealycom">Built for Use: Driving Profitability Through the User Experience</a></li>
+    <li>Jenny Preece, Helen Sharp, Yvonne Rogers - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/1119020751/iansealycom">Interaction Design</a></li>
+    <li>Charles Wyke-Smith - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321858476/iansealycom">Stylin' with CSS: A Designer's Guide</a></li>
+    <li>Scott Berkun - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0596517718/iansealycom">Making Things Happen: Mastering Project Management</a></li>
+    <li>BJ Fogg - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/1558606432/iansealycom">Persuasive Technology: Using Computers to Change What We Think and Do</a></li>
+    <li>Robert Cialdini - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0321188950/iansealycom">Influence: Science and Practice</a></li>
+    <li>Don Norman - <a href="http://www.amazon.co.uk/exec/obidos/ASIN/0465051367/iansealycom">Emotional Design: Why We Love (or Hate) Everyday Things</a></li>
+</ul>
 
 
             </main>
