--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -70,6 +70,90 @@ Assignment | Web Development and User Experience - Birkbeck, University of Londo
 Assignment
 </h1>
                 
+<p>The Web Development and User Experience assignment must be submitted by <strong>Tuesday, Jan 9 2018</strong>. Also, there are a number of <a href="#milestones">milestones</a> that must be completed by specific dates.</p>
+
+<h2>Assignment Details</h2>
+
+<p>This assignment tests your analytical, technical and user experience skills. The topic for your assignment must be <a href="#milestone1">agreed with your tutors</a>.</p>
+
+<p>The assignment should be between 4,000 and 6,000 words. You may use tables, diagrams, screenshots, code and images to explain your work clearly and concisely.
+
+<p>In this assignment you will produce a detailed functional specification document for your project. It will describe:</p>
+
+<ul>
+    <li>user and business requirements</li>
+    <li>the proposed information architecture</li>
+    <li>your chosen evaluation methods</li>
+    <li>project plan and costing</li>
+</ul>
+
+<p>You will then use the information in your functional specification to mock up and develop two sample pages for your Web site.</p>
+
+<p>Your assignment must demonstrate that you have a clear understanding of:</p>
+
+<ul>
+    <li>user-centred design</li>
+    <li>information architecture</li>
+    <li>Web usability</li>
+    <li>Web standards</li>
+    <li>HTML and CSS</li>
+    <li>accessibility</li>
+</ul>
+
+<p>Your assignment should be fully reviewed by you to ensure accuracy, consistency and completeness. It should be in a form that presents a professional approach - well presented, succinct and lacking in ambiguity. You should show evidence of original user research, evaluation and iterations in design that address the findings of the research and evaluation. You should critically discuss and correctly reference your source materials.</p>
+
+<h3>Deliverables</h3>
+
+<p>Your assignment submission must contain:</p>
+
+<ol>
+    <li>Your <strong>functional specification document</strong>, which will cover the following topics:
+        <ul>
+            <li>
+                <strong>User research and business objectives:</strong> Explain the business objectives for your chosen project. Describe your target users and their needs. Critically discuss your approach to user research in contrast to other methods. Explain how you aim to bring user needs and business objectives together as an overall value proposition with specific site goals.
+            </li>
+            <li>
+                <strong>Design:</strong> Document the proposed information architecture of your site by using appropriate techniques, showing the overall structure (site map), specific task flows, as well as the individual pages (wireframes). Critically discuss how you solved the design problem on a conceptual as well as a detailed level. Justify your solution both in terms of user needs and usability principles. Define content requirements, technical requirements and write a short design brief.
+            </li>
+            <li>
+                <strong>Evaluation:</strong> Describe how you evaluated your design and critically discuss your chosen approach and its relative strengths and weaknesses in contrast to other methods. Describe, discuss and prioritise your findings and show how they will be reflected in the final design. You may choose to evaluate your design with users, or use an inspection technique. Either way, you need to explain and justify your approach considering the theoretical background as well as the practical application.
+            </li>
+            <li>
+                <strong>Project planning:</strong> Include a high level project plan that describes the different project activities and timeframes, resources and costs.
+            </li>
+        </ul>
+    </li>
+    <li><strong>Mock-ups</strong> of your home page and one other page of your site. The mock-ups can be drawn by hand or digitally. They should include:
+        <ul>
+            <li>Global navigation</li>
+            <li>Local navigation (if appropriate)</li>
+            <li>Title and headings</li>
+            <li>Footer information</li>
+            <li>Any other appropriate navigation tools</li>
+        </ul>
+    </li>
+    <li><strong>HTML code</strong>, produced using Brackets or another similar editor, for your home page and one other page. Including HTML comments.</li>
+    <li><strong>CSS code</strong>, produced using Brackets or another similar editor. Including CSS comments.</li>
+    <li><strong>Screenshots</strong> of both pages taken in <em>two</em> different Web browsers (i.e. <em>four</em> screenshots in total).</li>
+    <li><strong>Supporting documentation</strong> describing the design and development of your sample pages. The documentation should demonstrate your understanding of Web standards and your wider reading.</li>
+</ol>
+
+<h2 id="milestones">Milestones</h2>
+
+<h3 id="milestone1">Milestone 1</h3>
+
+<p>By Tuesday, Oct 17 2017 (WDUX02) you must have selected a topic for your assignment project. The requirements are:</p>
+
+<ul>
+    <li>The project should be specific enough to cater for a <strong>well-defined audience</strong> with <strong>specific needs and interests</strong>. Avoid a project that is too large in scope to be successfully realised or has an audience too vague to design for.</li>
+    <li>You should have easy access to project stakeholders for interviews designed to elicit <strong>business objectives</strong> and <strong>functional requirements</strong> for the Web site. If the project is for you (for example, a Web site for your sole trader business) then you should be able to articulate the <strong>objectives</strong> and <strong>success criteria</strong>.</li>
+    <li>You should have ready access to at least 5 or 6 research participants that represent the <strong>target audience</strong> for the Web site. These participants must be available for interviews, which, at a minimum, can be conducted by phone, but face-to-face is best. These interviews are to develop an understanding of the needs and attitudes of your target audience.</li>
+    <li>The project should have a level of <strong>technical complexity</strong> that can be achieved during the course.</li>
+</ul>
+
+<p>Please discuss your chosen project with the tutors during WDUX02.</p>
+
+<p><strong>Further milestones will be added when appropriate.</strong></p>
 
 
             </main>
