--- a/public/mailing-list/index.html
+++ b/public/mailing-list/index.html
@@ -70,6 +70,23 @@ Mailing List | Web Development and User Experience - Birkbeck, University of Lon
 Mailing List
 </h1>
                 
+<p>We have a mailing list that <strong>all students must join</strong>. We will use this list to contact you, but you should also use it as a discussion forum to help each other with problems you may be having and to share details of good resources you have found.</p>
+
+<p>To join the list, go to the list's <a href="http://lists.bbkweb.org/listinfo.cgi/wdux1718-bbkweb.org">Web page</a> and <strong>subscribe</strong>. (Note that it's a two step process and you'll be sent an email containing a URL that you need to follow in order to subscribe. Please check your junk mail if you don't receive the email.) The membership of the list is restricted and all new members must be authorised by the course tutors.</p>
+
+<p>To send messages to the list, you should email:</p>
+
+<ul>
+    <li><a href="mailto:wdux1718@bbkweb.org">wdux1718@bbkweb.org</a></li>
+</ul>
+
+<p>We would prefer all questions to be sent to the above mailing list, but if you need to contact the course tutors then you should send a message to:</p>
+
+<ul>
+    <li><a href="mailto:wduxtutors@bbkweb.org">wduxtutors@bbkweb.org</a></li>
+</ul>
+
+<p>Only the tutors and administrative staff receive emails sent to wduxtutors@bbkweb.org. Please don't email any of the tutors individually, but instead always email the above address. You'll get a much faster response that way. Although you'll get an even faster response if you email the mailing list.</p>
 
 
             </main>
