--- a/content/students/_index.html
+++ b/content/students/_index.html
@@ -13,7 +13,37 @@ draft: false
         </tr>
     </thead>
     <tbody>
-{{< student "name" "username" >}}
+{{< student "ABDULLE, Sagal" "sabdul23" >}}
+{{< student "ALKHALIFA, Shaikha" "salkha01" >}}
+{{< student "CHISHTY, Aqsa Saleem" "achish01" >}}
+{{< student "CLOKEY, Megan" "mcloke01" >}}
+{{< student "DAVIS, Jamie" "jdavis20" >}}
+{{< student "DE JESUS, Alaina" "aeyeng01" >}}
+{{< student "DOS SANTOS, Vanderlei" "vdossa02" >}}
+{{< student "EVANS-POLLARD, Janine" "jevans20" >}}
+{{< student "FERREIRA GOMES, Maribel" "mferre08" >}}
+{{< student "FOSTER, Kelly" "kfoste10" >}}
+{{< student "GODFREY, Lee" "lgodfr02" >}}
+{{< student "HALL-SMITH, Olivia" "ohalls01" >}}
+{{< student "HANIF, Mohammed" "mhanif02" >}}
+{{< student "KADER, Erhan" "ekader01" >}}
+{{< student "KANIO, Christine" "ckanio01" >}}
+{{< student "KNIGHT, Jane" "jknigh07" >}}
+{{< student "LAPACINSKAS, Grazvydas" "glapac01" >}}
+{{< student "LASZLO, Boruzs" "blaszl01" >}}
+{{< student "LATTEEF, Zelah" "zlatte01" >}}
+{{< student "MUNTIANU, Elena" "emunti01" >}}
+{{< student "MUSCROFT, Marco" "mmuscr01" >}}
+{{< student "NORMAN, Rochelle" "rnorma05" >}}
+{{< student "OLANIYAN, Michael" "molani01" >}}
+{{< student "PEDDIE, Margery" "mpeddi01" >}}
+{{< student "PRIORE, Federica" "fprior01" >}}
+{{< student "SHANKISHVILI, Nino" "nshank01" >}}
+{{< student "SHEEHAN, Nicholas" "hshee01" >}}
+{{< student "SMITH, April" "asmith66" >}}
+{{< student "STEVENS, Lloyd" "lsteve07" >}}
+{{< student "TATYGULOVA, Arna" "atatyg01" >}}
+{{< student "TONEV, Bozhidar" "btonev01" >}}
     </tbody>
 </table>
 
