--- a/public/students/index.html
+++ b/public/students/index.html
@@ -80,9 +80,189 @@ Students
     </thead>
     <tbody>
 <tr>
-    <td scope="row">name</td>
-    <td>username</td>
-    <td><a href="http://username.wdux1718.bbkweb.org/">http://username.wdux1718.bbkweb.org/</a></td>
+    <td scope="row">ABDULLE, Sagal</td>
+    <td>sabdul23</td>
+    <td><a href="http://sabdul23.wdux1718.bbkweb.org/">http://sabdul23.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">ALKHALIFA, Shaikha</td>
+    <td>salkha01</td>
+    <td><a href="http://salkha01.wdux1718.bbkweb.org/">http://salkha01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">CHISHTY, Aqsa Saleem</td>
+    <td>achish01</td>
+    <td><a href="http://achish01.wdux1718.bbkweb.org/">http://achish01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">CLOKEY, Megan</td>
+    <td>mcloke01</td>
+    <td><a href="http://mcloke01.wdux1718.bbkweb.org/">http://mcloke01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">DAVIS, Jamie</td>
+    <td>jdavis20</td>
+    <td><a href="http://jdavis20.wdux1718.bbkweb.org/">http://jdavis20.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">DE JESUS, Alaina</td>
+    <td>aeyeng01</td>
+    <td><a href="http://aeyeng01.wdux1718.bbkweb.org/">http://aeyeng01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">DOS SANTOS, Vanderlei</td>
+    <td>vdossa02</td>
+    <td><a href="http://vdossa02.wdux1718.bbkweb.org/">http://vdossa02.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">EVANS-POLLARD, Janine</td>
+    <td>jevans20</td>
+    <td><a href="http://jevans20.wdux1718.bbkweb.org/">http://jevans20.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">FERREIRA GOMES, Maribel</td>
+    <td>mferre08</td>
+    <td><a href="http://mferre08.wdux1718.bbkweb.org/">http://mferre08.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">FOSTER, Kelly</td>
+    <td>kfoste10</td>
+    <td><a href="http://kfoste10.wdux1718.bbkweb.org/">http://kfoste10.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">GODFREY, Lee</td>
+    <td>lgodfr02</td>
+    <td><a href="http://lgodfr02.wdux1718.bbkweb.org/">http://lgodfr02.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">HALL-SMITH, Olivia</td>
+    <td>ohalls01</td>
+    <td><a href="http://ohalls01.wdux1718.bbkweb.org/">http://ohalls01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">HANIF, Mohammed</td>
+    <td>mhanif02</td>
+    <td><a href="http://mhanif02.wdux1718.bbkweb.org/">http://mhanif02.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">KADER, Erhan</td>
+    <td>ekader01</td>
+    <td><a href="http://ekader01.wdux1718.bbkweb.org/">http://ekader01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">KANIO, Christine</td>
+    <td>ckanio01</td>
+    <td><a href="http://ckanio01.wdux1718.bbkweb.org/">http://ckanio01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">KNIGHT, Jane</td>
+    <td>jknigh07</td>
+    <td><a href="http://jknigh07.wdux1718.bbkweb.org/">http://jknigh07.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">LAPACINSKAS, Grazvydas</td>
+    <td>glapac01</td>
+    <td><a href="http://glapac01.wdux1718.bbkweb.org/">http://glapac01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">LASZLO, Boruzs</td>
+    <td>blaszl01</td>
+    <td><a href="http://blaszl01.wdux1718.bbkweb.org/">http://blaszl01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">LATTEEF, Zelah</td>
+    <td>zlatte01</td>
+    <td><a href="http://zlatte01.wdux1718.bbkweb.org/">http://zlatte01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">MUNTIANU, Elena</td>
+    <td>emunti01</td>
+    <td><a href="http://emunti01.wdux1718.bbkweb.org/">http://emunti01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">MUSCROFT, Marco</td>
+    <td>mmuscr01</td>
+    <td><a href="http://mmuscr01.wdux1718.bbkweb.org/">http://mmuscr01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">NORMAN, Rochelle</td>
+    <td>rnorma05</td>
+    <td><a href="http://rnorma05.wdux1718.bbkweb.org/">http://rnorma05.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">OLANIYAN, Michael</td>
+    <td>molani01</td>
+    <td><a href="http://molani01.wdux1718.bbkweb.org/">http://molani01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">PEDDIE, Margery</td>
+    <td>mpeddi01</td>
+    <td><a href="http://mpeddi01.wdux1718.bbkweb.org/">http://mpeddi01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">PRIORE, Federica</td>
+    <td>fprior01</td>
+    <td><a href="http://fprior01.wdux1718.bbkweb.org/">http://fprior01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">SHANKISHVILI, Nino</td>
+    <td>nshank01</td>
+    <td><a href="http://nshank01.wdux1718.bbkweb.org/">http://nshank01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">SHEEHAN, Nicholas</td>
+    <td>hshee01</td>
+    <td><a href="http://hshee01.wdux1718.bbkweb.org/">http://hshee01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">SMITH, April</td>
+    <td>asmith66</td>
+    <td><a href="http://asmith66.wdux1718.bbkweb.org/">http://asmith66.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">STEVENS, Lloyd</td>
+    <td>lsteve07</td>
+    <td><a href="http://lsteve07.wdux1718.bbkweb.org/">http://lsteve07.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">TATYGULOVA, Arna</td>
+    <td>atatyg01</td>
+    <td><a href="http://atatyg01.wdux1718.bbkweb.org/">http://atatyg01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">TONEV, Bozhidar</td>
+    <td>btonev01</td>
+    <td><a href="http://btonev01.wdux1718.bbkweb.org/">http://btonev01.wdux1718.bbkweb.org/</a></td>
 </tr>
 
     </tbody>
