--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -110,13 +110,13 @@ Assignment
     <li>Your <strong>functional specification document</strong>, which will cover the following topics:
         <ul>
             <li>
-                <strong>User research and business objectives:</strong> Explain the business objectives for your chosen project. Describe your target users and their needs. Critically discuss your approach to user research in contrast to other methods. Explain how you aim to bring user needs and business objectives together as an overall value proposition with specific site goals.
+                <strong>User research and business objectives:</strong> Explain the business objectives for your chosen project. Describe your target users and their needs. Critically discuss your approach to user research in contrast to other methods. Explain how you aim to bring user needs and business objectives together as an overall value proposition with specific site goals. Critically review some similar sites and describe what you can learn from them.
             </li>
             <li>
-                <strong>Design:</strong> Document the proposed information architecture of your site by using appropriate techniques, showing the overall structure (site map), specific task flows, as well as the individual pages (wireframes). Critically discuss how you solved the design problem on a conceptual as well as a detailed level. Justify your solution both in terms of user needs and usability principles. Define content requirements, technical requirements and write a short design brief.
+                <strong>Design:</strong> Document the proposed information architecture of your site by using appropriate techniques, showing the overall structure (site map), specific task flows, as well as the individual pages (wireframes). Critically discuss how you solved the design problem on a conceptual as well as a detailed level. Justify your solution both in terms of user needs and usability principles. Define content requirements.
             </li>
             <li>
-                <strong>Evaluation:</strong> Describe how you evaluated your design and critically discuss your chosen approach and its relative strengths and weaknesses in contrast to other methods. Describe, discuss and prioritise your findings and show how they will be reflected in the final design. You may choose to evaluate your design with users, or use an inspection technique. Either way, you need to explain and justify your approach considering the theoretical background as well as the practical application.
+                <strong>Testing:</strong> Describe how you tested your design and critically discuss your chosen approach and its relative strengths and weaknesses in contrast to other methods. Describe, discuss and prioritise your findings and show how they will be reflected in the final design. You may choose to test your design with users, or use an inspection technique. Either way, you need to explain and justify your approach considering the theoretical background as well as the practical application.
             </li>
             <li>
                 <strong>Project planning:</strong> Include a high level project plan that describes the different project activities and timeframes, resources and costs.
