--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -153,6 +153,55 @@ Assignment
 
 <p>Please discuss your chosen project with the tutors during WDUX02.</p>
 
+<h3 id="milestone2">Milestone 2</h3>
+
+<p>By Tuesday, Oct 31 2017 (WDUX04) you need to have answered the following questions:</p>
+
+<ol>
+    <li>
+        <p><strong>Who is the client and what are the client's objectives for this project?</strong></p>
+        <p>Make a list of things that the client wants to achieve through the project.</p>
+        <p>Refer back to the slides and the reading if you are unsure how to do this.</p>
+    </li>
+    <li>
+        <p><strong>Are there any other stakeholders in the process? If yes, who?</strong></p>
+        <p>Conduct a stakeholder analysis. Build a communication plan.</p>
+    </li>
+    <li>
+        <p><strong>What is the value proposition of your Web site?</strong></p>
+        <p>That's like a mission statement for your project. Sum it up in one sentence. It should contain the following components:</p>
+        <ul>
+            <li><strong>What:</strong> What is the site?</li>
+            <li><strong>Who:</strong> Who provides it and who is the audience?</li>
+            <li><strong>How:</strong> How does it deliver value to the user and the business?</li>
+        </ul>
+        <p>For example: anaesthesia.info is a Web site for the NHS (client) that informs concerned patients (audience) about different types of anaesthesia (topic) by providing a wiki with frequently asked questions (features).</p>
+        <p>Don't just stick to this example format; come up with a format that fits your project. Don't aim for perfection first time - you may discover that your value proposition changes as you do your research.</p>
+    </li>
+    <li>
+        <p><strong>Who is the target audience for your site?</strong></p>
+        <p>Look at the target audience and how the needs of different visitor types differ. Define different types of users and their anticipated needs, and where you think you need to do more research.</p>
+    </li>
+    <li>
+        <p><strong>What are the objectives of your user research? What do you want to find out about your target audience?</strong></p>
+        <p>Define research objectives as bullets; the &quot;known unknowns&quot;. Be aware that these may change as you start your research and you might discover some &quot;unknown unknowns&quot;.</p>
+    </li>
+    <li>
+        <p><strong>Research the market for your site? Are there similar sites, competitors or sites you can draw ideas from?</strong></p>
+        <p>Review for common features and content, and any good ideas.</p>
+    </li>
+</ol>
+
+<p>A few tips:</p>
+
+<ul>
+    <li>Keep a journal of your research, ideas and decisions to aid your memory and document your research and design progress.</li>
+    <li>Write things up as you go along to make your final assignment easier. Write down findings, people you talked to, processes, issues you had conducting your research. Remember that the reader of your assignment may know nothing about your project.</li>
+    <li>Don't start making shiny objects at this stage: substance is more important than presentation.</li>
+    <li>Don't be afraid of asking more questions!</li>
+    <li>Don't be afraid of failure! Finding out that some of your project assumptions are wrong is an essential part of the design process. This part of the project is about de-risking your project by re-aligning your ideas with business requirements and user needs.</li>
+</ul>
+
 <p><strong>Further milestones will be added when appropriate.</strong></p>
 
 
