--- a/content/students/_index.html
+++ b/content/students/_index.html
@@ -15,10 +15,13 @@ draft: false
     <tbody>
 {{< student "ABDULLE, Sagal" "sabdul23" >}}
 {{< student "ALKHALIFA, Shaikha" "salkha01" >}}
+{{< student "ANDREWS, Aakash" "aandre06" >}}
+{{< student "CALISTI, Giorgia" "gcalis02" >}}
 {{< student "CHISHTY, Aqsa Saleem" "achish01" >}}
 {{< student "CLOKEY, Megan" "mcloke01" >}}
 {{< student "DAVIS, Jamie" "jdavis20" >}}
 {{< student "DE JESUS, Alaina" "aeyeng01" >}}
+{{< student "DZITKO, Emilia" "edzitk01" >}}
 {{< student "EVANS-POLLARD, Janine" "jevans20" >}}
 {{< student "FERREIRA GOMES, Maribel" "mferre08" >}}
 {{< student "FOSTER, Kelly" "kfoste10" >}}
