--- a/public/students/index.html
+++ b/public/students/index.html
@@ -92,6 +92,18 @@ Students
 </tr>
 
 <tr>
+    <td scope="row">ANDREWS, Aakash</td>
+    <td>aandre06</td>
+    <td><a href="http://aandre06.wdux1718.bbkweb.org/">http://aandre06.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">CALISTI, Giorgia</td>
+    <td>gcalis02</td>
+    <td><a href="http://gcalis02.wdux1718.bbkweb.org/">http://gcalis02.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
     <td scope="row">CHISHTY, Aqsa Saleem</td>
     <td>achish01</td>
     <td><a href="http://achish01.wdux1718.bbkweb.org/">http://achish01.wdux1718.bbkweb.org/</a></td>
@@ -113,6 +125,12 @@ Students
     <td scope="row">DE JESUS, Alaina</td>
     <td>aeyeng01</td>
     <td><a href="http://aeyeng01.wdux1718.bbkweb.org/">http://aeyeng01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
+    <td scope="row">DZITKO, Emilia</td>
+    <td>edzitk01</td>
+    <td><a href="http://edzitk01.wdux1718.bbkweb.org/">http://edzitk01.wdux1718.bbkweb.org/</a></td>
 </tr>
 
 <tr>
