--- a/content/students/_index.html
+++ b/content/students/_index.html
@@ -28,6 +28,7 @@ draft: false
 {{< student "HANIF, Mohammed" "mhanif02" >}}
 {{< student "KADER, Erhan" "ekader01" >}}
 {{< student "KANIO, Christine" "ckanio01" >}}
+{{< student "KIMURA, Yukiko" "ykimur02" >}}
 {{< student "KNIGHT, Jane" "jknigh07" >}}
 {{< student "LAPACINSKAS, Grazvydas" "glapac01" >}}
 {{< student "LASZLO, Boruzs" "blaszl01" >}}
