--- a/public/students/index.html
+++ b/public/students/index.html
@@ -170,6 +170,12 @@ Students
 </tr>
 
 <tr>
+    <td scope="row">KIMURA, Yukiko</td>
+    <td>ykimur02</td>
+    <td><a href="http://ykimur02.wdux1718.bbkweb.org/">http://ykimur02.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
     <td scope="row">KNIGHT, Jane</td>
     <td>jknigh07</td>
     <td><a href="http://jknigh07.wdux1718.bbkweb.org/">http://jknigh07.wdux1718.bbkweb.org/</a></td>
