--- a/content/students/_index.html
+++ b/content/students/_index.html
@@ -43,6 +43,7 @@ draft: false
 {{< student "SMITH, April" "asmith66" >}}
 {{< student "STEVENS, Lloyd" "lsteve07" >}}
 {{< student "TATYGULOVA, Arna" "atatyg01" >}}
+{{< student "TEWOLDE, Rediat" "rtewol01" >}}
 {{< student "TONEV, Bozhidar" "btonev01" >}}
     </tbody>
 </table>
