--- a/public/students/index.html
+++ b/public/students/index.html
@@ -260,6 +260,12 @@ Students
 </tr>
 
 <tr>
+    <td scope="row">TEWOLDE, Rediat</td>
+    <td>rtewol01</td>
+    <td><a href="http://rtewol01.wdux1718.bbkweb.org/">http://rtewol01.wdux1718.bbkweb.org/</a></td>
+</tr>
+
+<tr>
     <td scope="row">TONEV, Bozhidar</td>
     <td>btonev01</td>
     <td><a href="http://btonev01.wdux1718.bbkweb.org/">http://btonev01.wdux1718.bbkweb.org/</a></td>
