--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -202,6 +202,27 @@ Assignment
     <li>Don't be afraid of failure! Finding out that some of your project assumptions are wrong is an essential part of the design process. This part of the project is about de-risking your project by re-aligning your ideas with business requirements and user needs.</li>
 </ul>
 
+<h3 id="milestone3">Milestone 3</h3>
+
+<p>By Tuesday, Nov 7 2017 (WDUX05) you need to have answered the following questions (as well as the above ones):</p>
+
+<ol>
+    <li>
+        <p><strong>Who are the users of your site?</strong></p>
+        <p>Look at the target audience and how the needs of different visitor types differ. Define different types of users and their anticipated needs, and where you think you need to do more research. Start working on a basic segmentation by demographics and needs.</p>
+    </li>
+    <li>
+        <p><strong>What are the objectives of your user research? What do you want to find out about your target audience?</strong></p>
+        <p>Define research objectives as bullets; the &quot;known unknowns&quot;. Be aware that these may change as you start your research and you might discover some &quot;unknown unknowns&quot;.</p>
+    </li>
+    <li>
+        <p><strong>How are you going to conduct your research? Make a research plan. Where/what method/who with/what equipment?</strong></p>
+    </li>
+    <li>
+        <p><strong>Build a discussion guide. What questions do you know you want to ask?</strong></p>
+    </li>
+</ol>
+
 <p><strong>Further milestones will be added when appropriate.</strong></p>
 
 
