--- a/public/students/index.html
+++ b/public/students/index.html
@@ -164,7 +164,7 @@ Students
 </tr>
 
 <tr>
-    <td scope="row">KIMURA, Yuki</td>
+    <td scope="row">KIDO, Kiko</td>
     <td>ykimur02</td>
     <td><a href="http://ykimur02.wdux1718.bbkweb.org/">http://ykimur02.wdux1718.bbkweb.org/</a></td>
 </tr>
