--- a/content/staff/_index.html
+++ b/content/staff/_index.html
@@ -38,12 +38,12 @@ Birkbeck, University of London<br />
 Bloomsbury<br />
 London WC1H 0PD</p>
 
-<h2>Beth Fessahaye, Programme Administrator</h2>
+<h2>Jack Redden, Programme Administrator</h2>
 
-<p>Beth is your first point of contact for all administrative aspects of the course.</p>
+<p>Jack is your first point of contact for all administrative aspects of the course.</p>
 
-<p>Tel: 020 3073 8221<br />
-Email: <a href="mailto:b.fessahaye@bbk.ac.uk">b.fessahaye@bbk.ac.uk</a><br />
+<p>Tel: 020 3073 8232<br />
+Email: <a href="mailto:j.redden@bbk.ac.uk">j.redden@bbk.ac.uk</a><br />
 Department of Film, Media and Cultural Studies<br />
 School of Arts<br />
 Birkbeck, University of London<br />
