--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -72,6 +72,63 @@ Assignment
                 
 <p>The Visual Design and Web Project assignment must be submitted by <strong>Tuesday, Apr 10 2018</strong>.</p>
 
+<p>The assignment is split into two equally weighted parts - <strong>Visual Design</strong> and <strong>Web Project</strong>.</p>
+
+<h2>Visual Design</h2>
+
+<p>You will produce a portfolio of images demonstrating how to manipulate media for use on the Web. The deliverables are:</p>
+
+<ol>
+    <li>A portfolio of <strong>10 digital images</strong>, ideally for use in your final Web Project. The images will be taken from a variety of sources including scanned images, original artwork created in a graphics package and images from an online photo bureau. For each image, briefly explain, in a caption, why and how you produced it. You will show that you understand the following principles:
+        <ul>
+            <li>colour correction and manipulation</li>
+            <li>saving images in a Web format</li>
+            <li>optimising graphics for Web use</li>
+        </ul>
+    </li>
+    <li>Two <strong>user interface mockups</strong> as prototypes for your Web Project. The mockups will include text, colour and images.</li>
+    <li>Either
+        <ul>
+            <li>An <strong>image sprite</strong> and a sample page showing how it will be used.</li>
+        </ul>
+        or
+        <ul>
+            <li>An <strong>animated GIF</strong> for use in a social media campaign. You will describe how the image will be used as part of the campaign.</li>
+        </ul>
+    </li>
+</ol>
+
+<h2>Web Project</h2>
+
+<p>You will produce an accessible, professional Web site that conforms to Web standards and best practice. The Web site will be accompanied by supporting documentation describing how and why you've developed your site in the way you have.</p>
+
+<p>Your Web site will:</p>
+
+<ul>
+    <li>Conform to Web standards and best practice</li>
+    <li>Have an appropriate information architecture</li>
+    <li>Use appropriate user interface elements in a consistent design</li>
+    <li>Demonstrate good separation of content (HTML), presentation (CSS) and, if appropriate, behaviour (JavaScript)</li>
+    <li>Demonstrate a sound understanding of HTML and CSS</li>
+    <li>Be demonstrably accessible</li>
+    <li>Be appropriate to the subject matter and audience</li>
+    <li>Be well documented with comments in the code and detailed supporting documentation</li>
+</ul>
+
+<p>(Note: marks will be available for the use of advanced client-side (e.g. JavaScript) and server-side (e.g. SSIs) techniques, but the majority of the marks are focussed on the above and the use of such advanced techniques is not a requirement for a good overall mark.)</p>
+
+<p>The supporting documentation is very important for this assignment as it allows you to demonstrate wider reading and development that did not make it into the final Web site. (For example, you might have developed an advanced mega menu for your site, but found that it was impossible to implement in an accessible way. Although not suitable for your final Web site, the code could still be included in your documentation and discussed, as this is likely to demonstrate your understanding of HTML, CSS, JavaScript and accessibility.)</p>
+
+<h2>Submission</h2>
+
+<p>Your final submission for this assignment will take the form of a Word or PDF document containing:</p>
+
+<ul>
+    <li>The URL(s) in your Web space of the Visual Design deliverables<br />(e.g. http://iansealy.vdwp1718.bbkweb.org/portfolio/)</li>
+    <li>The URL of your Web Project<br />(e.g. http://iansealy.vdwp1718.bbkweb.org/webproject/)</li>
+    <li>The supporting documentation for your Web Project</li>
+</ul>
+
 
             </main>
         </div>
